--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,34 @@
-
-h1 {
-     background: linear-gradient(#000000 ,#5c0303 ,#961818,#e73731,#fa3030,#961818,#5c0303,#000000 );
-     color: #ffffff;
-     padding: 20px;
-     font-family: "Inconsolata", sans-serif;
+* {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
 
+header {
+  
+        width: 100%;
+        height: 50px;
+        background: #333;
+        color: #fff;
+        
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+   
+}
+
+
+h1 {
+	font-family: 'Bowlby One SC', cursive;
+}
+
+.contenedor {
+        width: 98%;
+        margin: auto;
+    }
+section {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+    
