--- a/src/style.css
+++ b/src/style.css
@@ -7,39 +7,28 @@ body {
      margin: 0;
 }
 .header {
-    padding: 5px;
+    padding: 20px;
     text-align: center;
-    background: #a6c2b3   ;
-    color: #000 ; 
-    font-family: 'Great Vibes';
-    font-size: 40px;
+    background: /*linear-gradient(rgb(255, 251, 248),#D7CEC6 ) */linear-gradient(#C04848, #480048) ;
+    color:#FFF ; 
+    font-size : 50px;
+    font-family:'Brush Script MT';
 }
-
-
-    
-
-.header h2 {
-  font-size : 50px;
-
-}
-
 .row {  
     display: flex;
     flex-wrap: wrap;
     
 }
-
-
 .side {
-    flex: 30%;
-    background-color: #f1f1f1;
+    flex: 40%;
+    background-color:#B29D89 ;
+    color: #FFF;
     padding: 20px;
 }
 
-
 .main {   
-    flex: 70%;
-    background-color: white;
+    flex: 60%;
+    
     padding: 20px;
 }
 
@@ -48,3 +37,4 @@ body {
     text-align: center; 
     background: #ddd; 
 } 
+
